--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
   margin: 0 auto;
+  width: 100%;
   text-align: center;
   
   --barber-900: #12131b;
@@ -10,5 +11,5 @@
   --button-gray: #dfdfdf;
   --button-danger: #ff4040;
   --orange-900: #fba931;
-  
+
 }
